<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="users_assignment">Пользовательское соглашение</string>
    <string name="construction">Функция появится позже</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_app_template">Share this app: %1$s</string>
    <string name="support_email">ju1yborn@yandex.ru</string>
    <string name="email_subject_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="legal_practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="track_name_placeholder">Ошибка загрузки</string>
    <string name="no_data_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью</string>
    <string name="check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="y_searched">Вы искали</string>


    <string name="time_placeholder">00:00</string>
    <string name="country">Страна</string>
    <string name="style">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="length">Длительность</string>

    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="playlist_creator_title">Новый плейлист</string>
    <string name="playlist_creator_but">Создать</string>
    <string name="playlist_creator_toast_title">Завершить создание плейлиста?</string>
    <string name="playlist_creator_toast_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_creator_resume">Отмена</string>
    <string name="playlist_creator_cancel">Завершить</string>
    <string name="playlist_creator_name_hint">Название*</string>
    <string name="playlist_creator_info_hint">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>


    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_title">Удалить плейлист</string>
    <string name="delete_text">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="track_delete_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="empty_tracks_message">В данном плейлисте нет треков которыми можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>


</resources>