<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="?attr/colorPrimaryVariant"
            android:paddingHorizontal="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"/>
            </LinearLayout>


    <FrameLayout
        android:layout_marginTop="24dp"
        style="@style/settings_button">>
        <TextView
            style="@style/settings_text"
            android:text="@string/dark_theme" />
        <Switch
            android:id="@+id/switchDarkTheme"
            style="@style/settings_icon"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareButton"
        style="@style/settings_button">
        <TextView
            style="@style/settings_text"
            android:text="@string/share_app" />
        <ImageView
            style="@style/settings_icon"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportButton"
        style="@style/settings_button">
        <TextView
            style="@style/settings_text"
            android:text="@string/write_to_support" />
        <ImageView
            style="@style/settings_icon"
            android:src="@drawable/ic_support" />
    </FrameLayout>



    <FrameLayout
        android:id="@+id/agreementButton"
        style="@style/settings_button">
        <TextView
            style="@style/settings_text"
            android:text="@string/users_assignment" />
        <ImageView
            style="@style/settings_icon"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>

</LinearLayout>