<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:paddingHorizontal="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/search_button"
            style="@style/main_button"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/library_button"
            style="@style/main_button"
            android:text="@string/library"
            app:icon="@drawable/ic_library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/main_button"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>


</LinearLayout>