<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:background="?attr/colorSecondaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="18dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorPrimaryVariant"/>
        <TextView
            android:id="@+id/library_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/playlist_creator_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/new_playlist_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src="@drawable/ic_add_photo"
        android:background="@drawable/playlist_empty_img_background"
        android:scaleType="centerInside"
        tools:ignore="contentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="26dp" />

    <EditText
        android:id="@+id/playlist_name"
        style="@style/playlist_creator_edit_text"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_image"
        android:hint="@string/playlist_creator_name_hint"/>

    <EditText
        android:id="@+id/new_playlist_inf_et"
        style="@style/playlist_creator_edit_text"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        android:hint="@string/playlist_creator_info_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_creator_name_hint"
        app:layout_constraintStart_toStartOf="@id/playlist_name"
        app:layout_constraintBottom_toBottomOf="@id/playlist_name"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="46dp"
        android:paddingHorizontal="4dp"
        android:background="?attr/colorSecondaryVariant"
        android:textColor="@color/blue"
        android:visibility="gone"
        android:id="@+id/new_name_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_creator_info_hint"
        app:layout_constraintStart_toStartOf="@id/new_playlist_inf_et"
        app:layout_constraintBottom_toBottomOf="@id/new_playlist_inf_et"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="46dp"
        android:paddingHorizontal="4dp"
        android:background="?attr/colorSecondaryVariant"
        android:textColor="@color/blue"
        android:visibility="gone"
        android:id="@+id/new_info_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/tap_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:text="@string/playlist_creator_but"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:letterSpacing="0"
        android:outlineProvider="none"
        android:enabled="false"
        android:id="@+id/create_playlist_but" />

</androidx.constraintlayout.widget.ConstraintLayout>