<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity"
    android:backgroundTint="?attr/colorPrimaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.PlayerActivity"
        android:backgroundTint="?attr/colorPrimaryVariant">

    <!--использовал проценты для горизонтальных гайдлайнов, потому чтопосчитал что макет
    чувствительныйк высоте и абсолютные значения не подходят для некоторых экранов-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bot_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/quarter_barier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/left_barrier"
        app:layout_constraintGuide_begin="24dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/right_barrier"
        app:layout_constraintGuide_end="24dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/left_barrier_16"
        app:layout_constraintGuide_begin="16dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/right_barrier_16"
        app:layout_constraintGuide_end="16dp"/>

    <ImageView
        android:id="@+id/back"
        android:src="@drawable/ic_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="18dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintBottom_toTopOf="@id/center_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />
    <TextView
        android:id="@+id/title_name"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintTop_toTopOf="@id/center_barrier"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintEnd_toEndOf="@id/right_barrier"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintVertical_bias="0.5"/>
    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintEnd_toEndOf="@id/right_barrier"
        android:maxLines="1"
        android:ellipsize="end"/>

    <!--Рискнул расчитать размер кнопок в процентах, потому что при статическом указании размера
    они заезжали на информацию об альбоме на нестандартных экранах.
    При необходимости могу исправить на стандартные статические размеры-->
    <ImageButton
        android:id="@+id/playlist_but"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_queue"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintBottom_toBottomOf="@+id/play_but"
        app:layout_constraintStart_toEndOf="@id/left_barrier"
        app:layout_constraintTop_toTopOf="@id/play_but"
        app:layout_constraintDimensionRatio="1:1"/>

    <ImageButton
        android:id="@+id/favorite_but"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_favorite"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintBottom_toBottomOf="@+id/play_but"
        app:layout_constraintEnd_toStartOf="@id/right_barrier"
        app:layout_constraintTop_toTopOf="@id/play_but"
        app:layout_constraintDimensionRatio="1:1"/>

    <ImageButton
        android:id="@+id/play_but"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_play"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/playlist_but"
        app:layout_constraintEnd_toStartOf="@+id/favorite_but"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintBottom_toTopOf="@id/quarter_barier"
        app:layout_constraintVertical_bias="0.375"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintHeight_percent="0.1"/>


    <TextView
        android:id="@+id/player_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/time_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/play_but"
        app:layout_constraintStart_toStartOf="@+id/play_but"
        app:layout_constraintTop_toBottomOf="@+id/play_but"/>

    <TextView
        android:id="@+id/length"
        style="@style/track_detail_title"
        android:text="@string/length"
        app:layout_constraintTop_toBottomOf="@id/quarter_barier"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/left_barrier_16"/>

    <TextView
        android:id="@+id/album"
        style="@style/track_detail_title"
        android:text="@string/album"
        app:layout_constraintTop_toBottomOf="@id/length"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/left_barrier_16"/>

    <TextView
        android:id="@+id/year"
        style="@style/track_detail_title"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintBottom_toTopOf="@id/style"
        app:layout_constraintStart_toStartOf="@id/left_barrier_16"/>

    <TextView
        android:id="@+id/style"
        style="@style/track_detail_title"
        android:text="@string/style"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="@id/left_barrier_16"/>

    <TextView
        android:id="@+id/country"
        style="@style/track_detail_title"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/style"
        app:layout_constraintBottom_toBottomOf="@id/bot_barrier"
        app:layout_constraintStart_toEndOf="@id/left_barrier_16"/>


    <TextView
        android:id="@+id/country_detail"
        style="@style/track_detail_text"
        app:layout_constraintBaseline_toBaselineOf="@id/country"
        app:layout_constraintEnd_toStartOf="@id/right_barrier_16"
        app:layout_constraintStart_toEndOf="@id/country" />
    <TextView
        android:id="@+id/style_detail"
        style="@style/track_detail_text"
        app:layout_constraintBaseline_toBaselineOf="@id/style"
        app:layout_constraintEnd_toStartOf="@id/right_barrier_16"
        app:layout_constraintStart_toEndOf="@id/style"/>
    <TextView
        android:id="@+id/year_detail"
        style="@style/track_detail_text"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/right_barrier_16"
        app:layout_constraintStart_toEndOf="@id/year"/>
    <TextView
        android:id="@+id/album_detail"
        style="@style/track_detail_text"
        app:layout_constraintBaseline_toBaselineOf="@id/album"
        app:layout_constraintEnd_toStartOf="@id/right_barrier_16"
        app:layout_constraintStart_toEndOf="@id/album"/>
    <TextView
        android:id="@+id/length_detail"
        style="@style/track_detail_text"
        app:layout_constraintBaseline_toBaselineOf="@id/length"
        app:layout_constraintEnd_toStartOf="@id/right_barrier_16"
        app:layout_constraintStart_toEndOf="@id/length" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/sheet_catch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist"
            android:textSize="19sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            android:fontFamily="@font/ys_display_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_new_but"
            android:layout_marginTop="28dp"
            style="@style/playlist_creator_but" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            tools:listitem="@layout/mini_playlist_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
